--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,13 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.5",
-    "pg": "^8.3.3"
+    "pg": "^8.3.3",
+    "uuidv4": "^6.2.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
